# agentbus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  dist-workspace.toml
crates/agentbus-bin/: Cargo.toml
crates/agentbus-bin/tests/: concurrency.rs  protocol.rs
crates/agentbus-cli/: Cargo.toml
crates/agentbus-cli/src/: main.rs
crates/agentbus-core/: Cargo.toml
crates/agentbus-core/src/: lib.rs
crates/agentbus-core/tests/: database.rs  types.rs
crates/agentbus-mcp/: Cargo.toml  README.md
crates/agentbus-pty/: Cargo.toml
crates/agentbus-pty/src/: adapter.rs  inject.rs  lib.rs  runner.rs
crates/agentbusd/: Cargo.toml
crates/agentbusd/src/: main.rs
crates/agentbusd/tests/: concurrency.rs  protocol.rs
smoke/: Cargo.toml  load_test.sh  main.rs  mock_agent.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: cli_flow.rs
