[workspace]
members = ["crates/agentbus-core", "crates/agentbus-pty", "crates/agentbus-bin", "tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ram"]
repository = "https://github.com/ramazanayyildiz/agentbus"
homepage = "https://github.com/ramazanayyildiz/agentbus"
license = "MIT"
description = "Message bus for AI coding agents — Claude Code, Codex, Aider, opencode — letting them talk to each other through PTY injection or MCP."

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
portable-pty = "0.8"
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
