[package]
name = "agentbus-e2e"
version = "0.1.0"
edition = "2021"
publish = false

# This is a test-only crate — no library, no binary. Integration tests live
# in tests/*.rs and spawn the real agentbus + agentbusd binaries.
[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
