[package]
name = "agentbus-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "agentbus-mcp"
path = "src/main.rs"

[dependencies]
agentbus-core = { path = "../agentbus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
