[package]
name = "agentbus-pty"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]

[dependencies]
agentbus-core = { path = "../agentbus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing = { workspace = true }
anyhow = { workspace = true }
portable-pty = { workspace = true }
libc = { workspace = true }
