[package]
name = "agentbusd"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "agentbusd"
path = "src/main.rs"

[dependencies]
agentbus-core = { path = "../agentbus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = "5"
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util", "macros"] }
serde_json = "1"
agentbus-core = { path = "../agentbus-core" }
rusqlite = { workspace = true }
serial_test = "3"
